# cline

sdk/: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  DOC.md  README.md  TESTING.md  TODO.md  biome.json  package.json  tsconfig.json  vitest.workspace.ts
sdk/.github/workflows/: publish-cli.yaml  publish-sdk.yaml  test.yml
sdk/.greptile/: config.json
sdk/agents/: ARCHITECTURE.md  DOC.md  README.md  package.json
sdk/agents/src/: agent.test.ts  agent.ts  example.test.ts  extensions.ts  hooks.ts  index.ts  message-builder.ts  streaming.test.ts  streaming.ts  tools.test.ts  types.ts
sdk/apps/: tsconfig.apps.json
sdk/apps/cli/: ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  DISTRIBUTION.md  Doc.md  README.md  bun.mts  package.json  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts
sdk/apps/code/: README.md  bun.mts  next.config.mjs  package.json  (+2 more)
sdk/apps/code/src-tauri/: Cargo.toml  tauri.conf.json
sdk/apps/code/src-tauri/src/: main.rs
sdk/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
sdk/apps/desktop/src-tauri/src/: main.rs
sdk/cli/: ARCHITECTURE.md  Doc.md  README.md  package.json  tsconfig.json
sdk/core/: README.md  package.json  tsconfig.json
sdk/desktop/: ARCHITECTURE.md  README.md  next.config.mjs  package.json  tailwind.config.ts
sdk/docs/: next.config.mjs  package.json
sdk/examples/: README.md
sdk/llms/: ARCHITECTURE.md  README.md  package.json  tsconfig.json
sdk/scripts/: check-boundaries.sh  check-publish.ts  release.ts  verify-packages.ts  version.ts
src/shared/: api.ts
src/utils/: model-utils.ts
(+498 files in other folders)
